<resources>
    <string name="app_name">PizzaWallet</string>

    <string name="toobar_title">标题</string>
    <string name="follow_home">首页</string>
    <string name="my">账户</string>

    <string name="scan">扫描</string>
    <string name="dressbook">地址簿</string>
    <string name="tradebook">交易记录</string>
    <string name="addresstitle">地址薄</string>
    <string name="kind">币种</string>
    <string name="select_bi">选择</string>
    <string name="yes">确定</string>
    <string name="login">登录</string>

    <string name="commit">提交</string>
    <string name="regist">注册</string>
    <string name="go">立即体验</string>

</resources>
