<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#331199"
    android:minHeight="1500dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


   <LinearLayout
       android:id="@+id/ll_scan"
       android:background="@drawable/shap_background"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:padding="8dp">
       <ImageView
           android:layout_width="80dp"
           android:layout_height="80dp"
           android:src="@mipmap/ic_launcher"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/scan"
           android:layout_marginTop="5dp"
           android:textSize="16sp"
           />

   </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_dressbook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shap_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dressbook"
            android:textSize="16sp" />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/ll_tradebook"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/shap_background"
        android:padding="8dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tradebook"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="生成二维码
"
        />

</LinearLayout>